# dw-web

./: Cargo.toml  LICENSE  README.md  woerterbuch.json
.github/workflows/: rust.yml
src/: counter_state.rs  exercise.rs  fetch_words.rs  lib.rs  words.rs
www/: index.html  index.js  package.json  style.css  webpack.config.js
