[package]
name = "dw-web"
version = "0.1.0"
authors = ["amvasil-v <alex.m.vasil@gmail.com>"]
edition = "2021"
description = "German vocabulary learning game on Rust and WebAssembly"
repository = "https://github.com/amvasil-v/dw-web"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.35"
wasm-bindgen-futures = "0.4.34"
reqwest = "0.11.14"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[dependencies.web-sys]
version = "0.3.35"
features = [
  "console",
]

