[package]
name = "dw-web"
version = "0.1.0"
authors = ["amvasil-v <alex.m.vasil@gmail.com>"]
edition = "2021"
description = "German vocabulary learning game on Rust and WebAssembly"
repository = "https://github.com/amvasil-v/dw-web"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.35"
wasm-bindgen-futures = "0.4.34"
reqwest = "0.11.14"
calamine = "0.19.1"
wasm-logger = "0.2.0"
log = "0.4.17"
json = "0.12.4"
base64 = "0.21.0"
strum = "0.24.0"
strum_macros = "0.24.0"
rand = "0.8.5"
serde = {version = "1.0.147", features = ["derive"]}
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[dependencies.web-sys]
version = "0.3.35"
features = [
  "console",
]

